added appropriate variables to js. created regexp to confirm password includes values from checkboxes.

--- a/index.html
+++ b/index.html
@@ -59,6 +59,13 @@
               <input type="checkbox" id="numerics" unchecked class="val">
               <br><br>
           </div>
+          <div class="pw-length">
+                <label class="label">Password Length (8-128)</label>
+                <input type="number" id="length" min="8" max="128">
+                <br><br>
+            </div>
+
+          </div>
 
           <textarea
             readonly
